# meltdown-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-build.yaml
Application/: CMakeLists.txt
Application/src/: Actions.cpp  Actions.hpp  Application.cpp  Application.hpp  CameraController.cpp  CameraController.hpp  Main.cpp
Application/src/Events/: CustomEventType.hpp  InvertSpinEvent.hpp
Application/src/GUIs/: CameraSettingsGui.cpp  CameraSettingsGui.hpp  ProfilerGui.cpp  ProfilerGui.hpp
Application/src/Models/: RotatingModel.cpp  RotatingModel.hpp  SpinningModel.cpp  SpinningModel.hpp
Engine/: CMakeLists.txt
Engine/include/: Meltdown.hpp
Engine/include/meltdown/: enums.hpp  event.hpp  gui.hpp  macros.hpp  math.hpp  model.hpp  structs.hpp  window.hpp
Engine/pch/: pch.hpp
Engine/src/: Engine.cpp  Engine.hpp  Meltdown.cpp
Engine/src/AssetIO/: AssetFileHeaders.hpp  MaterialIO.cpp  MaterialIO.hpp  MeshIO.cpp  MeshIO.hpp
Engine/src/Camera/: Camera.cpp  Camera.hpp
Engine/src/Event/: Event.cpp  EventManager.cpp  EventManager.hpp
Engine/src/GUIs/: GuiWindow.cpp  GuiWindow.hpp  ProfilerGui.cpp  ProfilerGui.hpp  SettingsGui.cpp  SettingsGui.hpp
Engine/src/Input/: Input.cpp  InputHandler.cpp  InputHandler.hpp
Engine/src/Material/: Material.cpp  Material.hpp  MaterialLump.cpp  MaterialLump.hpp
Engine/src/Math/: Mat4x4.cpp  Quaternion.cpp  UIntVec2.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Engine/src/Model/: EmptyModel.hpp  Model.cpp  ModelHandler.cpp
Engine/src/Scene/: Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
Engine/src/Shaders/Billboard/: billboard.vert
Engine/src/Shaders/Default/: default.frag  default.vert
Engine/src/Shaders/Framebuffer/: framebuffer.frag  framebuffer.vert
Engine/src/Shaders/MultiMaterial3D/: colored-multi-material-3d.frag  multi-material-3d.frag  multi-material-3d.vert
Engine/src/Shaders/RayTracing/: ray-tracing.rchit  ray-tracing.rgen  ray-tracing.rmiss  utils.glsl
Engine/src/Utils/: EngineStructs.hpp  FileHandler.cpp  FileHandler.hpp  Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp  StringParser.cpp  StringParser.hpp
Engine/src/Vulkan/AccelerationStructure/: AccelerationStructure.cpp  AccelerationStructure.hpp  ScratchAccelerationStructure.cpp  ScratchAccelerationStructure.hpp
Engine/src/Vulkan/Command/: CommandHandler.cpp  CommandHandler.hpp  Synchronization.cpp
Engine/src/Vulkan/Descriptors/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetHandler.cpp  DescriptorSetHandler.hpp
Engine/src/Vulkan/Device/: Device.cpp  Device.hpp  GpuBuffer.cpp  GpuBuffer.hpp  Memory.cpp  Memory.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  QueueFamilies.cpp  QueueFamilies.hpp
Engine/src/Vulkan/Frame/: Frame.cpp  Frame.hpp  Framebuffer.cpp  Framebuffer.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp
Engine/src/Vulkan/Gui/: Gui.cpp  Gui.hpp  SettingsGui.cpp  SettingsGui.hpp
Engine/src/Vulkan/ImGui/: GuiWindow.cpp  ImGuiHandler.cpp  ImGuiHandler.hpp
Engine/src/Vulkan/Image/: Image.cpp  Image.hpp  Texture.cpp  Texture.hpp
Engine/src/Vulkan/Instance/: DebugMessenger.cpp  DebugMessenger.hpp  VulkanInstance.cpp  VulkanInstance.hpp
Engine/src/Vulkan/Mesh/: BaseMeshManager.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  ObjMeshLoader.cpp  ObjMeshLoader.hpp
Engine/src/Vulkan/Mesh/Billboard/: Billboard.cpp  Billboard.hpp  BillboardManager.cpp  BillboardManager.hpp
Engine/src/Vulkan/Mesh/DefaultMesh/: DefaultMesh.cpp  DefaultMesh.hpp  DefaultMeshManager.cpp  DefaultMeshManager.hpp
Engine/src/Vulkan/Mesh/MultiMaterial3D/: MultiMaterial3DMesh.cpp  MultiMaterial3DMesh.hpp  MultiMaterial3DMeshManager.cpp  MultiMaterial3DMeshManager.hpp
Engine/src/Vulkan/Mesh/RayTracingMesh/: RayTracingMesh.cpp  RayTracingMesh.hpp  RayTracingMeshManager.cpp  RayTracingMeshManager.hpp
Engine/src/Vulkan/Pipeline/: ComputePipeline.cpp  ComputePipeline.hpp  FramebufferPipeline.cpp  FramebufferPipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Pipeline.cpp  Pipeline.hpp  RayTracingPipeline.cpp  RayTracingPipeline.hpp  ShaderModule.cpp  ShaderModule.hpp
Engine/src/Vulkan/Pipeline/Builders/: ColorBlendBuilder.cpp  ColorBlendBuilder.hpp  DescriptorSetBuilder.cpp  DescriptorSetBuilder.hpp  PipelineMapping.cpp  PipelineMapping.hpp  ShaderLoader.cpp  VertexInputBuilder.cpp  VertexInputBuilder.hpp
Engine/src/Vulkan/Render/: Renderer.cpp  Renderer.hpp
Engine/src/Window/: Window.cpp  Window.hpp  WindowHandler.cpp  WindowHandler.hpp
resources/materials/: cube.mtrl  dodecahedron.mtrl  ground.mtrl  icosahedron.mtrl  octahedron.mtrl  tetrahedron.mtrl
resources/meshes/: cube.mesh  dodecahedron.mesh  ground.mesh  icosahedron.mesh  meltdown_box.mesh  octahedron.mesh  tetrahedron.mesh
resources/meshes/cube/: cube.mtl
resources/meshes/dodecahedron/: dodecahedron.mtl
resources/meshes/ground/: ground.mtl
resources/meshes/icosahedron/: icosahedron.mtl
resources/meshes/meltdown_box/: meltdown_box.mtl
resources/meshes/octahedron/: octahedron.mtl
resources/meshes/polyhedra/: cube.mtl  dodecahedron.mtl  icosahedron.mtl  octahedron.mtl  tetrahedron.mtl
resources/meshes/tetrahedron/: tetrahedron.mtl
resources/scenes/: meltdown_demo.json  ray_tracing.json
src/: Main.cpp
src/Application/: Application.cpp  Application.hpp
src/Engine/: Engine.cpp  Engine.hpp
src/Engine/Camera/: Camera.cpp  Camera.hpp
src/Engine/Input/: InputHandler.cpp  InputHandler.hpp
src/Engine/Scene/: Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
src/Engine/Shaders/Billboard/: billboard.frag  billboard.vert
src/Engine/Shaders/Default/: default.frag  default.vert
src/Engine/Utils/: EngineEnums.hpp  EngineStructs.hpp  FileHandler.cpp  FileHandler.hpp  Logger.cpp  Logger.hpp  StringParser.cpp  StringParser.hpp
src/Engine/Vulkan/Command/: CommandHandler.cpp  CommandHandler.hpp  Synchronization.cpp  Synchronization.hpp
src/Engine/Vulkan/Descriptors/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetHandler.cpp  DescriptorSetHandler.hpp
src/Engine/Window/: Window.cpp  Window.hpp
(+49 files in other folders)
